--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="proxy-container">
         <div class="proxy-title">Welcome to NOVA Proxy</div>
         <div class="url-input">
-            <form action="http://localhost:3000" method="GET" target="_blank">
+            <form action="http://172.20.10.3:3000" method="GET" target="_blank">
                 <input type="text" name="url" placeholder="Enter URL to access..." required />
                 <button class="submit-button" type="submit">Go</button>
             </form>
