--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             padding: 10px 30px;
             border-radius: 30px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            animation: slideDown 0.5s ease-out forwards;
         }
         .navbar a {
             color: #f0f0f0;
@@ -65,15 +64,12 @@
             text-align: center;
             max-width: 600px;
             width: 100%;
-            opacity: 0;
-            animation: fadeIn 1s 0.3s forwards;
         }
         .proxy-title {
             font-size: 36px;
             font-weight: 600;
             margin-bottom: 20px;
             letter-spacing: 1.5px;
-            animation: fadeIn 1s 0.5s forwards;
         }
         .url-input {
             display: flex;
@@ -87,7 +83,6 @@
             width: 80%;
             margin-left: auto;
             margin-right: auto;
-            animation: grow 0.7s 0.6s forwards;
         }
         .url-input input {
             border: none;
@@ -116,38 +111,6 @@
             font-size: 14px;
             color: #888;
             margin-top: 20px;
-            opacity: 0;
-            animation: fadeIn 1s 1s forwards;
-        }
-
-        /* Animations */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-        @keyframes slideDown {
-            from {
-                transform: translateY(-50px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-        @keyframes grow {
-            from {
-                transform: scale(0.8);
-                opacity: 0;
-            }
-            to {
-                transform: scale(1);
-                opacity: 1;
-            }
         }
     </style>
 </head>
@@ -162,7 +125,7 @@
     <div class="proxy-container">
         <div class="proxy-title">Welcome to NOVA Proxy</div>
         <div class="url-input">
-            <form action="http://192.168.0.68:3000" method="GET" target="_blank">
+            <form action="http://192.168.0.68:3001/" method="GET" target="_blank">
                 <input type="text" name="url" placeholder="Enter URL to access..." required />
                 <button class="submit-button" type="submit">Go</button>
             </form>
