--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,10 +6,11 @@
     <title>NOVA Proxy</title>
     <link rel="icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> <!-- Adding Roboto for the logo -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMhZQK13Bl5O0v0B28jI/DyYXHKyYIq2wq8hP" crossorigin="anonymous" />
     <style>
         body {
-            background: linear-gradient(135deg, #0b0b0b, #1e1e1e);
+            background: linear-gradient(135deg, #0b0b0b, #474747);
             font-family: 'Poppins', sans-serif;
             display: flex;
             flex-direction: column;
@@ -25,21 +26,37 @@
             top: 20px;
             left: 30px;
             font-family: 'Roboto', sans-serif;
-            font-size: 28px; /* Adjusted font size */
+            font-size: 28px; 
             font-weight: 700;
             color: white;
             letter-spacing: 2px;
-            font-style: italic; /* Italicized */
+            font-style: italic; 
+            animation: fadeIn 1s 1s forwards, rgbSnake 6s infinite;
         }
+
+        .logo1 {
+            position: absolute;
+            top: 55px;
+            left: 30px;
+            font-family: 'Roboto', sans-serif;
+            font-size: 14px; 
+            font-weight: 700;
+            color: white;
+            letter-spacing: 2px;
+            font-style: italic; 
+            animation: fadeIn 1s 1s forwards, rgbSnake 6s infinite;
+        }
+
         .navbar {
             position: absolute;
-            top: 60px; /* Moved closer to the logo */
+            top: 15px; 
             display: flex;
             justify-content: space-around;
-            background-color: #0f0f0f;
+            background: linear-gradient(135deg, #303030, #000000);
             padding: 10px 30px;
             border-radius: 30px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            animation: slideDown 0.5s ease-out forwards;
         }
         .navbar a {
             color: #f0f0f0;
@@ -64,25 +81,33 @@
             text-align: center;
             max-width: 600px;
             width: 100%;
+            opacity: 0;
+            animation: fadeIn 1s 0.3s forwards;
         }
         .proxy-title {
             font-size: 36px;
             font-weight: 600;
             margin-bottom: 20px;
             letter-spacing: 1.5px;
+            animation: fadeIn 1s 0.5s forwards;
+            animation: fadeIn 1s 1s forwards, rgbSnake 6s infinite;
         }
         .url-input {
             display: flex;
             align-items: center;
-            background: linear-gradient(135deg, #0c0c0c, #000000);
+            background: linear-gradient(135deg, #303030, #000000);
             border-radius: 30px;
-            padding: 15px 20px;
-            margin-bottom: 20px;
+            padding: 10px;
             box-shadow: 0 4px 12px rgba(255, 255, 255, 0.1);
             border: 2px solid #333;
             width: 80%;
-            margin-left: auto;
-            margin-right: auto;
+            margin: 0 auto; 
+            animation: grow 0.7s 0.6s forwards;
+        }
+        .url-input i {
+            color: #f0f0f0;
+            margin-right: 10px; 
+            font-size: 20px; 
         }
         .url-input input {
             border: none;
@@ -90,32 +115,74 @@
             color: #f0f0f0;
             outline: none;
             font-size: 18px;
-            width: 100%;
-            padding-left: 10px;
+            flex-grow: 1; 
+            padding: 10px; 
         }
         .submit-button {
-            background-color: #f0f0f0;
-            color: #333;
+            background: linear-gradient(135deg, #131313, #303030);
+            color: #fff;
             border: none;
             padding: 10px 20px;
             border-radius: 25px;
             font-weight: bold;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
+            animation: fadeIn 1s 1s forwards, rgbSnake 6s infinite;
+            margin-left: 135px; 
         }
         .submit-button:hover {
-            background-color: #ccc;
+            background-color: #0f0f0f;
             transform: scale(1.05);
         }
         .footer-text {
             font-size: 14px;
-            color: #888;
             margin-top: 20px;
+            opacity: 0;
+            animation: fadeIn 1s 1s forwards, rgbSnake 6s infinite;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+        @keyframes slideDown {
+            from {
+                transform: translateY(-50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+        @keyframes grow {
+            from {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+        @keyframes rgbSnake {
+            0% { color: #ffb3ba; }
+            20% { color: #ffdfba; }
+            40% { color: #ffffba; }
+            60% { color: #baffc9; }
+            80% { color: #bae1ff; }
+            100% { color: #d1b3ff; }
         }
     </style>
 </head>
 <body>
     <div class="logo">NOVA Proxy</div>
+    <div class="logo1">v1.0</div>
     <div class="navbar">
         <a href="#home">Home</a>
         <a href="#games">Games</a>
@@ -125,12 +192,13 @@
     <div class="proxy-container">
         <div class="proxy-title">Welcome to NOVA Proxy</div>
         <div class="url-input">
-            <form action="http://192.168.0.68:3001/" method="GET" target="_blank">
+            <i class="fas fa-search"></i> <!-- Magnifying glass icon -->
+            <form action="http://192.168.0.68:3001" method="GET" target="_blank">
                 <input type="text" name="url" placeholder="Enter URL to access..." required />
-                <button class="submit-button" type="submit">Go</button>
+                <button class="submit-button" type="submit">Launch</button>
             </form>
-        </div>
-        <div class="footer-text">Made by Mint</div>
+        </div>        
+        <div class="footer-text">Created by Mint</div>
     </div>
 </body>
 </html>
