--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMhZQK13Bl5O0v0B28jI/DyYXHKyYIq2wq8hP" crossorigin="anonymous" />
     <style>
         body {
-            background: linear-gradient(135deg, #0b0b0b, #474747);
+            background-image: url("/assets/home-bg.jpg");
+            background-attachment: fixed;
+            background-size: cover;
+            background-repeat: no-repeat;
             font-family: 'Poppins', sans-serif;
             display: flex;
             flex-direction: column;
@@ -184,10 +187,10 @@
     <div class="logo">NOVA Proxy</div>
     <div class="logo1">v1.0</div>
     <div class="navbar">
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
         <a href="#games">Games</a>
         <a href="#apps">Apps</a>
-        <a href="#settings">Settings</a>
+        <a href="settings.html">Settings</a>
     </div>
     <div class="proxy-container">
         <div class="proxy-title">Welcome to NOVA Proxy</div>
