--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMhZQK13Bl5O0v0B28jI/DyYXHKyYIq2wq8hP" crossorigin="anonymous" />
     <style>
         body {
-            background-image: url("/assets/home-bg.jpg");
+            background: linear-gradient(135deg, #0b0b0b, #474747);
             background-attachment: fixed;
             background-size: cover;
             background-repeat: no-repeat;
