--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="proxy-title">Welcome to NOVA Proxy</div>
         <div class="url-input">
             <i class="fas fa-search"></i> <!-- Magnifying glass icon -->
-            <form action="https://google.com/search?p=" method="GET" target="_blank">
+            <form action="https://google.com/search?q=" method="GET" target="_blank">
                 <input type="text" name="url" placeholder="Enter URL to access..." required />
                 <button class="submit-button" type="submit">Launch</button>
             </form>
